[PRJ0002] fix book save + añadir control de excepciones